// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BooksTable /> with books: Array with many items should match the snapshot 1`] = `
<Table
  cellProps={
    Object {
      "onDelete": [MockFunction],
    }
  }
  columns={
    Array [
      Object {
        "label": "Title",
        "prop": "title",
      },
      Object {
        "label": "Publisher",
        "prop": "publisherName",
      },
      Object {
        "label": " ",
        "prop": "actions",
        "value": " ",
      },
    ]
  }
  data={
    Array [
      Object {
        "abbreviation": "sff",
        "id": "38a6666f-d3eb-4853-bd0a-add4d8ec369a",
        "playtest": true,
        "publicationDate": "2013-08-15",
        "publisherName": "Spelljammer Publishing",
        "slug": "spectres-flumph-fortress",
        "title": "Spectres of Flumph Fortress",
      },
      Object {
        "abbreviation": "cif",
        "id": "e34f5897-e225-47f5-a4fb-13fa6099edc5",
        "playtest": false,
        "publicationDate": "2013-08-20",
        "publisherName": "Spelljammer Publishing",
        "slug": "crime-in-flumphtownville",
        "title": "Crime in Flumphtownville",
      },
      Object {
        "abbreviation": "sf",
        "id": "4a0db3d6-0477-4ef0-9584-7723ffe2efd3",
        "playtest": false,
        "publicationDate": "2013-11-19",
        "publisherName": "Spelljammer Publishing",
        "slug": "secrets-flumph",
        "title": "Secrets of the Flumph",
      },
    ]
  }
  message="There are no books matching the criteria."
/>
`;

exports[`<BooksTable /> with books: empty Array should match the snapshot 1`] = `
<Table
  cellProps={
    Object {
      "onDelete": [MockFunction],
    }
  }
  columns={
    Array [
      Object {
        "label": "Title",
        "prop": "title",
      },
      Object {
        "label": "Publisher",
        "prop": "publisherName",
      },
      Object {
        "label": " ",
        "prop": "actions",
        "value": " ",
      },
    ]
  }
  data={Array []}
  message="There are no books matching the criteria."
/>
`;
